Fixed beverages margin alignment.

--- a/css/px.css
+++ b/css/px.css
@@ -772,5 +772,9 @@ a {
 
 
 	}
+.bev-title{
+margin-left: -25px;
+}
+
 	
 
